# MeteoCatLib

./: .gitignore  README.md  requirements.txt  setup.cfg
database/: meteocat_xema.sql  variable.py
meteocat/api/: meteocat_api.py  meteocat_urls.py  meteocat_xdde_api.py  meteocat_xema_api.py
meteocat/data_model/: __init__.py  lightning.py  measure.py  relations.py  state.py  variable.py  weather_station.py
meteocat/database/: meteocat_xdde.sql  meteocat_xema.sql
remote_api/: meteocat_xema_api.py
src/gisfire_meteocat_lib/classes/: __init__.py  lightning.py  measure.py  relations.py  state.py  variable.py  weather_station.py
src/gisfire_meteocat_lib/database/: __init__.py  create_tables.sh  lightnings.py  measures.py  meteocat_ref.sql  meteocat_xdde.py  meteocat_xdde.sql  meteocat_xema.py  meteocat_xema.sql  reference.py  variable.py  weather_station.py
src/gisfire_meteocat_lib/remote_api/: meteocat_api.py  meteocat_ref_api.py  meteocat_urls.py  meteocat_xdde_api.py  meteocat_xema_api.py
test/: conftest.py  database_init.sql  database_populate.sql  test_meteocat_ref_api.py  test_meteocat_xdde_api.py  test_meteocat_xdde_classes.py  test_meteocat_xdde_database.py  test_meteocat_xema_api.py  test_meteocat_xema_classes.py  test_meteocat_xema_database.py  todo_test_meteocat_xdde_database.py  todo_test_meteocat_xema_api.py  todo_test_meteocat_xema_database.py
test/fixtures/: database.py  sqlalchemy.py
test/fixtures/meteocat/: meteocat.py  ref.py  xdde.py  xema.py
test/fixtures/meteocat/xema/: measure.py  old_xema.py  variable.py  weather_station.py
