[metadata]
name = gisfire_meteocat_lib
version = 0.1.0
author = Jaume Figueras
author_email = jaume.figueras@upc.edu
description = Library to access MeteoCat agency open data and store it in a local database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JaumeFigueras/MeteoCatLib
project_urls =
    Bug Tracker = https://github.com/JaumeFigueras/MeteoCatLib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8

[options.package_data]
* = *.sql

[options.packages.find]
where = src